data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1451.wast
;; 2. **Test Description**: Design a test with a deeply nested control flow, where a `br_if` targets the innermost loop, but the stack does not have sufficient values for the loop's input type, causing an `EmptyValueStackExpecting` error in `wizard_engine`.   - **Constraint Being Checked**: Maintaining required number and type of operands for the stack when branches occur.   - **Stack Corruption Aspect**: Incorrect stack unwinding when targeting loops could leave stack entries in an invalid state, leading to subsequent instruction misexecution.

(assert_invalid
  (module
    (func $deep-nest (block (loop $L (br_if 0 (block (loop (br_if 1 (i32.const 1))))))))
  )
  "type mismatch"
)